Update and rename w3ll squad.html to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function FP_playSound(path) {//v1.0
 <br>
 <body bgcolor="black">
 <br>
-<center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4HeNsEUFtcmNih5N4XgecIUXYHo8LWuriWRHRMgTZaYpu71G7" height="350"></center>
+<center><img src="https://raw.githubusercontent.com/balbalgaming/silent.dpo.co.id/master/1587045110-picsay.png" height="350"></center>
 <br>
   <center><font color="red">HACKED BY ./BalBaLKun</font></center>
   <body>
