--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ function FP_playSound(path) {//v1.0
   <center><p><font color="white">tidak ada yang setia di dunia ini</font></p></center>
   <center><p><font color="white">Bahkan bayangan mu akan pergi dalam kegelapan</font></p></center>
   <br>
-  <center><font face="pacifico" color="red">all mamber W3LL SQUAD | KATROK cyber team | Mafia Cyber Team | ONE HAT CYBER TEAM</font></center>
+  <center><font face="pacifico" color="red">all mamber W3LL SQUAD | KATROK cyber team | Baby Cyber Mafia | ONE HAT CYBER TEAM</font></center>
 <br>
-<marquee>/4MN3SI4\ | BLACK BART 06 | <font color=red>| Nurmala <font color=aqua> | George74 | ./Eliot | Mr. AK13XWS(AS) | XnD0yZshHH | SUMO IRENG  | ./B4D#R4BB1T | DeXONE | MR.B41B4L.X | Z0y0n3-cripzGangs | R4D14N | Lollz | Mr.ByteID | Depars | SLBH | Mr.Maniz | FALKA | -IhS@N- | Mrs.Chanz | Fvckone | Mr.F4life <font color=pink> | Shinta17</marquee>
+<marquee>/4MN3SI4\ | BLACK BART 06 | Benjamin | <font color=red>| Nurmala <font color=aqua> | George74 | ./Eliot | Mr. AK13XWS(AS) | XnD0yZshHH | SUMO IRENG  | ./B4D#R4BB1T | DeXONE | MR.B41B4L.X | Z0y0n3-cripzGangs | R4D14N | Lollz | Mr.ByteID | Depars | SLBH | Mr.Maniz | FALKA | -IhS@N- | Mrs.Chanz | Fvckone | Mr.F4life <font color=pink> | Shinta17</marquee>
   <br>
   <center><font face="pacifico" color="white">©Copyright 2018</font></center>
   
